💋📍 Checkpoint ./style.css:35766351/277 ./index.html:35766351/1827 ./.glitch-assets:35766351/415

--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+<link
+      rel="icon"
+      href="https://cdn.glitch.global/9067e716-6662-4c46-a7b3-42707544c5aa/small-music-note-icon-14.png?v=1647285359972"
+      type="image/png"
+    />
+<title>Microbit Music Kit</title>
+<body style="background-color:#D3D3D3">
+    <! –– sets the background colour -->
+  
 <nav class="navbar">
       <ul class="navbar-nav">
         <li class="nav-item left2">Home</li>
@@ -27,6 +39,24 @@
     </nav>
 
 
-        
-
+  
+    </body>
+  </head>      
+</html>
 <link rel="stylesheet" href="style.css" /> <!-- Refereances the style sheet bringing css to the html -->
+
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<footer>
+  <p class="footer-links">Copyright &copy; Devpractical.com</p>
+  <ul class="footer-links">
+    <li>
+      <a href="/about/">About</a>
+    </li>
+    <li>
+      <a href="/privacy-policy/">Privacy Policy</a>
+    </li>
+    <li>
+      <a href="/disclaimer/">Disclaimer</a>
+    </li>
+ </ul>
+</footer>
