--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a href="#">FAQ</a>
             </li>
             <li class="dropdown-item">
-              <a href="#">Support</a>
+              <a href="#">Contact</a>
             </li>
             <li class="dropdown-item">
               <a href="#">solarize</a>
@@ -47,16 +47,16 @@
 
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <footer>
-  <p class="footer-links">Copyright &copy; Devpractical.com</p>
+  <p>..........Copyright &copy; Devpractical.com</p>
   <ul class="footer-links">
     <li>
-      <a href="/about/">About</a>
+      <a href="about.html">About</a>
     </li>
     <li>
-      <a href="/privacy-policy/">Privacy Policy</a>
+      <a href="privacy.html">Privacy Policy</a>
     </li>
     <li>
-      <a href="/disclaimer/">Disclaimer</a>
+      <a href="contact.html">Contact</a>
     </li>
  </ul>
 </footer>
