--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
       type="image/png"
     />
 <title>Microbit Music Kit</title>
-<body style="background-color:#D3D3D3">
+<body style="background-color:#4f4f4f">
     <! –– sets the background colour -->
   
 <nav class="navbar">
       <ul class="navbar-nav">
-        <li class="nav-item left2">Home</li>
-        <li class="nav-item">Product</li>
+        <a href="index.html" class="nav-item left2"> Home
+        </a>
+        <a href="product.html" class="nav-item"> Product </a>
 
         <li class="nav-item has-dropdown">
 
@@ -22,19 +23,19 @@
           <ul class="dropdown">
 
             <li class="dropdown-item">
-              <a href="#">FAQ</a>
+              <a href="faq.html">FAQ</a>
             </li>
             <li class="dropdown-item">
-              <a href="#">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
             <li class="dropdown-item">
-              <a href="#">solarize</a>
+              <a href="#">_____</a>
             </li>
 
           </ul>
         </li>
 
-        <li class="nav-item">Account</li>
+        <a href="account.html" class="nav-item"> Account </a>
       </ul>
     </nav>
 
@@ -50,13 +51,13 @@
   <p>..........Copyright &copy; Devpractical.com</p>
   <ul class="footer-links">
     <li>
-      <a href="about.html">About</a>
+      <a href="about.html">.About</a>
     </li>
     <li>
-      <a href="privacy.html">Privacy Policy</a>
+      <a href="product.html">.Product</a>
     </li>
     <li>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html">.Contact</a>
     </li>
  </ul>
 </footer>
