--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="background-color:#4f4f4f">
     <! –– sets the background colour -->
   
-<nav class="navbar">
+<nav class="navbar"> <!-- -->
       <ul class="navbar-nav">
         <a href="index.html" class="nav-item left2"> Home
         </a>
