🙆👦 Checkpoint ./index.html:35766351/25

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <footer>
-  <p>..........Copyright &copy; Devpractical.com</p>
+  <p>..........Copyright &copy; Music.ltd</p>
   <ul class="footer-links">
     <li>
       <a href="about.html">.About</a>
