🌒🐥 Checkpoint ./index.html:35766351/1139 ./style.css:35766351/6341

--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
 <link rel="stylesheet" href="style.css" />
 <!-- Refereances the style sheet bringing css to the html -->
 
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-<footer>
+<div id="page-container">
+   <div id="content-wrap">
+     <!-- all other page content goes here -->
+   </div>
+  
+<footer id="footer">
   <!-- creates a footer -->
   <p>..........Copyright &copy; Music.ltd</p>
   <!-- creates a paragraph -->
@@ -80,4 +84,5 @@
     </li>
   </ul>
 </footer>
+</div>
 <!-- closes footer -->
