🔋💴 Checkpoint ./style.css:35766351/702 ./index.html:35766351/354 ./firebase.js:35766351/328 ./contact.html:35766351/3245 ./info.html:35766351/2920 ./account.html:35766351/8887 ./account2.html:35766351/2951 ./faq.html:35766351/2898

--- a/info.html
+++ b/info.html
@@ -61,7 +61,7 @@
 <br/><br/><br/>
 <div id="page-container">
    <div id="content-wrap">
-     account info - thingspeak
+     Website information
      <!-- all other page content goes here -->
    </div>
 
@@ -88,4 +88,3 @@
 </footer>
 
 <!-- closes footer -->
-</div>
