--- a/contact.html
+++ b/contact.html
@@ -29,20 +29,95 @@ button {
      
 
 </style>  
+  <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link
+      rel="icon"
+      href="https://cdn.glitch.global/9067e716-6662-4c46-a7b3-42707544c5aa/small-music-note-icon-14.png?v=1647285359972"
+      type="image/png"
+    />
+    <!-- sets the tab icon -->
+    <title>Microbit Music Kit</title>
+    <!-- sets the title of the tab -->
+    <body style="background-color: #4f4f4f">
+      <!-- sets the background colour -->
+
+      <nav class="navbar">
+        <!-- creates a navbar with class navbar detailed in my css -->
+        <ul class="navbar-nav">
+          <!-- creates an unordered list with clas navbar-nav -->
+          <a href="index.html" class="nav-item left2">
+            Home
+            <!-- creates a href(link to another webpage) and titles it "Home"-->
+          </a>
+          <a href="product.html" class="nav-item"> Product </a>
+          <!-- creates a href(link to another webpage) and titles it "Product"-->
+
+          <li class="nav-item has-dropdown">
+            <!-- creates a new list with class dropdown -->
+
+            <a href="#">Services 🔽</a>
+            <!-- href with services title for dropdown -->
+
+            <ul class="dropdown">
+              <!-- creates an unordered list with class drop down which details oall relevant links -->
+
+              <li class="dropdown-item">
+                <!-- creates a list for the dropdown list -->
+                <a href="faq.html">FAQ</a>
+                <!-- creates a href to faq -->
+              </li>
+              <li class="dropdown-item">
+                <a href="contact.html">Contact</a>
+                <!-- creates a href to contact -->
+              </li>
+              <li class="dropdown-item">
+                <a href="info.html">Information</a>
+                <!-- creates a href to information -->
+              </li>
+            </ul>
+          </li>
+          <!-- closes all lists -->
+
+          <a href="account.html" class="nav-item"> Account </a>
+          <!-- creates a href(link to another webpage) and titles it "acount"-->
+        </ul>
+      </nav>
+    </body>
+  </head>
+</html>
+<link rel="stylesheet" href="style.css" />
+<!-- Refereances the style sheet bringing css to the html -->
+<br/><br/><br/>
+
+
+  
+<footer id="footer">
+  <!-- creates a footer -->
+  <p>..........Copyright &copy; Music.ltd</p>
+  <!-- creates a paragraph -->
+  <ul class="footer-links">
+    <!-- unordered list with class footer links -->
+    <li>
+      <a href="info.html">.Info</a>
+      <!-- list with href about -->
+    </li>
+    <li>
+      <a href="product.html">.Product</a>
+      <!-- list with href product -->
+    </li>
+    <li>
+      <a href="contact.html">.Contact</a>
+      <!-- list with href contact -->
+    </li>
+  </ul>
+</footer>
+<!-- closes footer -->
   <p>
           Use this to contact us
         </p>
-  <input type="text" placeholder="Name" id="fName" />
-
-        <br />
-        <br />
-
-        <input type="text" placeholder="Surname" id="sName" />
-
-        <br />
-              
-        <br />
-
+ 
 
         <input type="text" placeholder="Email" id="email" />
         <br />
