--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <!-- creates a href to contact -->
               </li>
               <li class="dropdown-item">
-                <a href="#">_____</a>
-                <!-- creates a href to _______ -->
+                <a href="info.html">Information</a>
+                <!-- creates a href to information -->
               </li>
             </ul>
           </li>
@@ -58,11 +58,13 @@
 </html>
 <link rel="stylesheet" href="style.css" />
 <!-- Refereances the style sheet bringing css to the html -->
-
+<br/><br/><br/>
 <div id="page-container">
    <div id="content-wrap">
+     thrrrrrrrrrrrr
      <!-- all other page content goes here -->
    </div>
+
   
 <footer id="footer">
   <!-- creates a footer -->
@@ -71,7 +73,7 @@
   <ul class="footer-links">
     <!-- unordered list with class footer links -->
     <li>
-      <a href="about.html">.About</a>
+      <a href="info.html">.Info</a>
       <!-- list with href about -->
     </li>
     <li>
@@ -84,5 +86,5 @@
     </li>
   </ul>
 </footer>
-</div>
+
 <!-- closes footer -->
