📫🌄 Checkpoint ./faq.html:35766351/39 ./product.html:35766351/3540 ./style.css:35766351/157 ./index.html:35766351/22

--- a/product.html
+++ b/product.html
@@ -1,1 +1,96 @@
-product
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link
+      rel="icon"
+      href="https://cdn.glitch.global/9067e716-6662-4c46-a7b3-42707544c5aa/small-music-note-icon-14.png?v=1647285359972"
+      type="image/png"
+    />
+    <!-- sets the tab icon -->
+    <title>Microbit Music Kit</title>
+    <!-- sets the title of the tab -->
+    <body style="background-color: #4f4f4f">
+      <!-- sets the background colour -->
+
+      <nav class="navbar">
+        <!-- creates a navbar with class navbar detailed in my css -->
+        <ul class="navbar-nav">
+          <!-- creates an unordered list with clas navbar-nav -->
+          <a href="index.html" class="nav-item left2">
+            Home
+            <!-- creates a href(link to another webpage) and titles it "Home"-->
+          </a>
+          <a href="product.html" class="nav-item"> Product </a>
+          <!-- creates a href(link to another webpage) and titles it "Product"-->
+
+          <li class="nav-item has-dropdown">
+            <!-- creates a new list with class dropdown -->
+
+            <a href="#">Services 🔽</a>
+            <!-- href with services title for dropdown -->
+
+            <ul class="dropdown">
+              <!-- creates an unordered list with class drop down which details oall relevant links -->
+
+              <li class="dropdown-item">
+                <!-- creates a list for the dropdown list -->
+                <a href="faq.html">FAQ</a>
+                <!-- creates a href to faq -->
+              </li>
+              <li class="dropdown-item">
+                <a href="contact.html">Contact</a>
+                <!-- creates a href to contact -->
+              </li>
+              <li class="dropdown-item">
+                <a href="info.html">Information</a>
+                <!-- creates a href to information -->
+              </li>
+            </ul>
+          </li>
+          <!-- closes all lists -->
+
+          <a href="account.html" class="nav-item"> Account </a>
+          <!-- creates a href(link to another webpage) and titles it "acount"-->
+        </ul>
+      </nav>
+    </body>
+  </head>
+</html>
+<link rel="stylesheet" href="style.css" />
+<!-- Refereances the style sheet bringing css to the html -->
+<br/><br/><br/>
+<div id="page-container">
+   <div id="content-wrap">
+     <p class="center">
+      fsdf 
+     </p>
+      <div class="right2">
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7631.968103334206!2d-50.72667889278294!3d67.00307916721461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4e91532c93e09b45%3A0x66c0d28fa993a614!2sOld%20Camp!5e0!3m2!1sen!2sie!4v1647293760856!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+     </div>
+        <!-- all other page content goes here -->
+   </div>
+
+  
+<footer id="footer">
+  <!-- creates a footer -->
+  <p>..........Copyright &copy; Music.ltd</p>
+  <!-- creates a paragraph -->
+  <ul class="footer-links">
+    <!-- unordered list with class footer links -->
+    <li>
+      <a href="info.html">.Info</a>
+      <!-- list with href about -->
+    </li>
+    <li>
+      <a href="product.html">.Product</a>
+      <!-- list with href product -->
+    </li>
+    <li>
+      <a href="contact.html">.Contact</a>
+      <!-- list with href contact -->
+    </li>
+  </ul>
+</footer>
+
+<!-- closes footer -->
+</div>
