--- a/faq.html
+++ b/faq.html
@@ -61,7 +61,7 @@
 <br/><br/><br/>
 <div id="page-container">
    <div id="content-wrap">
-     account info - thingspeak
+     faq of website
      <!-- all other page content goes here -->
    </div>
 
