--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <br/><br/><br/>
 <div id="page-container">
    <div id="content-wrap">
-     thrrrrrrrrrrrr
+     Homepage
      <!-- all other page content goes here -->
    </div>
 
