⛺️🍡 Checkpoint ./index.html:35616030/75

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
           <!-- creates a href(link to another webpage) and titles it "acount"-->
         </ul>
       </nav>
+      <br/>
+      <body>
+        <p>
+          
+        </p>
+      </body>
     </body>
   </head>
 </html>
