👑🎣 Checkpoint ./index.html:35616030/708

--- a/index.html
+++ b/index.html
@@ -55,9 +55,19 @@
       </nav>
       <br/>
       <body>
+        <h1>
+          lighting.com- the number 1 provider of quality light sensors- 25% off now
+        </h1> 
         <p>
-          
+          welcome to lighting.com the premier location for anything light sensor
         </p>
+        <p>
+        our product offers an accessible gateway into planting, we offer the best prices and goods around.
+        </p>
+        <p>
+          We dare YOU!! to find another marketplace with the same high quality devices and the low low prices
+        </p>
+        <p
       </body>
     </body>
   </head>
