💒🕹 Checkpoint ./index.html:35616030/23262

--- a/index.html
+++ b/index.html
@@ -53,54 +53,65 @@
           <!-- creates a href(link to another webpage) and titles it "acount"-->
         </ul>
       </nav>
-      <br/>
+      <br />
       <body>
         <h1>
-          lighting.com- the number 1 provider of quality light sensors- 25% off now
-        </h1> 
+          lighting.com- the number 1 provider of quality light sensors- 25% off
+          now
+        </h1>
         <p>
           welcome to lighting.com the premier location for anything light sensor
         </p>
         <p>
-        our product offers an accessible gateway into planting, we offer the best prices and goods around.
+          our product offers an accessible gateway into planting, we offer the
+          best prices and goods around.
         </p>
         <p>
-          We dare YOU!! to find another marketplace with the same high quality devices and the low low prices
+          We dare YOU!! to find another marketplace with the same high quality
+          devices and the low low prices
         </p>
-        <p
+        <p>
+          have you recently had a desire to get into plants? but you feel
+          overwhelmed by the amount of pressure? well we have just the product
+          for you! 7 day free refund if u happen to disagree( but we dont think
+          u will)
+        </p>
+        <p>
+          buy 1 light sensor for £20.99 or 3 for £39.99 (buy 2 get 1 free!!!)
+        </p>
       </body>
     </body>
   </head>
 </html>
 <link rel="stylesheet" href="style.css" />
 <!-- Refereances the style sheet bringing css to the html -->
-<br/><br/><br/>
+<br /><br /><br />
 <div id="page-container">
-   <div id="content-wrap">
-     Homepage
-     <!-- all other page content goes here -->
-   </div>
+  <div id="content-wrap">
+    Homepage
+    <!-- all other page content goes here -->
+  </div>
 
-  
-<footer id="footer">
-  <!-- creates a footer -->
-  <p>..........Copyright &copy; Music.ltd</p>
-  <!-- creates a paragraph -->
-  <ul class="footer-links">
-    <!-- unordered list with class footer links -->
-    <li>
-      <a href="info.html">.Info</a>
-      <!-- list with href about -->
-    </li>
-    <li>
-      <a href="product.html">.Product</a>
-      <!-- list with href product -->
-    </li>
-    <li>
-      <a href="contact.html">.Contact</a>
-      <!-- list with href contact -->
-    </li>
-  </ul>
-</footer>
+  <footer id="footer">
+    <!-- creates a footer -->
+    <p>..........Copyright &copy; Music.ltd</p>
+    <!-- creates a paragraph -->
+    <ul class="footer-links">
+      <!-- unordered list with class footer links -->
+      <li>
+        <a href="info.html">.Info</a>
+        <!-- list with href about -->
+      </li>
+      <li>
+        <a href="product.html">.Product</a>
+        <!-- list with href product -->
+      </li>
+      <li>
+        <a href="contact.html">.Contact</a>
+        <!-- list with href contact -->
+      </li>
+    </ul>
+  </footer>
 
-<!-- closes footer -->
+  <!-- closes footer -->
+</div>
