🗽🤑 Checkpoint ./index.html:35616030/8253 ./.glitch-assets:35616030/508 ./8udueueu.html:35616030/154 ./info.html:35616030/6038

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       type="image/png"
     />
     <!-- sets the tab icon -->
-    <title>Microbit Music Kit</title>
+    <title>Microbit light sensor</title>
     <!-- sets the title of the tab -->
     <body style="background-color: #4f4f4f">
       <!-- sets the background colour -->
@@ -82,36 +82,36 @@
       </body>
     </body>
   </head>
-</html>
-<link rel="stylesheet" href="style.css" />
-<!-- Refereances the style sheet bringing css to the html -->
-<br /><br /><br />
-<div id="page-container">
-  <div id="content-wrap">
-    Homepage
-    <!-- all other page content goes here -->
+  <link rel="stylesheet" href="style.css" />
+  <!-- Refereances the style sheet bringing css to the html -->
+  <br /><br /><br />
+  <div id="page-container">
+    <div id="content-wrap">
+      Homepage
+      <!-- all other page content goes here -->
+    </div>
+
+    <footer id="footer">
+      <!-- creates a footer -->
+      <p>..........Copyright &copy; Music.ltd</p>
+      <!-- creates a paragraph -->
+      <ul class="footer-links">
+        <!-- unordered list with class footer links -->
+        <li>
+          <a href="info.html">.Info</a>
+          <!-- list with href about -->
+        </li>
+        <li>
+          <a href="product.html">.Product</a>
+          <!-- list with href product -->
+        </li>
+        <li>
+          <a href="contact.html">.Contact</a>
+          <!-- list with href contact -->
+        </li>
+      </ul>
+    </footer>
+
+    <!-- closes footer -->
   </div>
-
-  <footer id="footer">
-    <!-- creates a footer -->
-    <p>..........Copyright &copy; Music.ltd</p>
-    <!-- creates a paragraph -->
-    <ul class="footer-links">
-      <!-- unordered list with class footer links -->
-      <li>
-        <a href="info.html">.Info</a>
-        <!-- list with href about -->
-      </li>
-      <li>
-        <a href="product.html">.Product</a>
-        <!-- list with href product -->
-      </li>
-      <li>
-        <a href="contact.html">.Contact</a>
-        <!-- list with href contact -->
-      </li>
-    </ul>
-  </footer>
-
-  <!-- closes footer -->
-</div>
+</html>
