😄🛩 Checkpoint ./faq.html:35616030/1287 ./index.html:35616030/1 ./info.html:35616030/14 ./product.html:35616030/12

--- a/faq.html
+++ b/faq.html
@@ -53,9 +53,24 @@
           <!-- creates a href(link to another webpage) and titles it "acount"-->
         </ul>
       </nav>
+      <br/>
       <h1>
         commonly asked questions
       </h1>
+      <p>
+       my light sensor wont turn on?
+      make sure all wiring is placed correctly and check to make sure wiring is connected properly
+      </p>
+      <p>
+      Do i need to wire this myself when it arrives?
+        no the light sensor is comes pre- wired for convience sake
+      </p>
+      How long will shipping take
+      dependng on the buyers location shipping can take upwards from 5-8 days
+      <p>
+        my light sensor is wired properly nut it wont turn on?
+        make sure the light sensor is connected to the wifi or any other present network connection
+      </p> 
       
     </body>
   </head>
