👩‍👩‍👦💆 Checkpoint ./hhhh.html:35616030/256 ./hhhh.html copy:35616030/152 ./product.html:35616030/100

--- a/product.html
+++ b/product.html
@@ -54,7 +54,10 @@
         </ul>
       </nav>
       <br/>
-    </body>
+    </<h1>
+        the light sensor
+      </h1>
+      </p>body>
   </head>
 </html>
 <link rel="stylesheet" href="style.css" />
