⛱🎢 Checkpoint ./product.html:35616030/9372 ./info.html:35616030/7387

--- a/info.html
+++ b/info.html
@@ -53,15 +53,22 @@
           <!-- creates a href(link to another webpage) and titles it "acount"-->
         </ul>
       </nav>
-      <br/>
+      <br />
       <p>
-        this company once had a humble start one man set out with the goal to help make planting as accessible as possible. we are proud to sy that goal has been achived as we are now number 1 market place for all things light sensor, We have even started to branch out into diffrent sectors as we continue to advance our tech.
+        this company once had a humble start one man set out with the goal to
+        help make planting as accessible as possible. we are proud to sy that
+        goal has been achived as we are now number 1 market place for all things
+        light sensor, We have even started to branch out into diffrent sectors
+        as we continue to advance our tech.
       </p>
       <p>
-        we are proud to say we have the best scientists constantly evolving our tech. we are constantly amazed by our community as they continue to come up with new ways to use and expirment with or technology
+        we are proud to say we have the best scientists constantly evolving our
+        tech. we are constantly amazed by our community as they continue to come
+        up with new ways to use and expirment with or technology
       </p>
       <p>
-        it does not matter if this is your first light sensor or your 20th we are elated to have you in our community
+        it does not matter if this is your first light sensor or your 20th we
+        are elated to have you in our community
       </p>
     </body>
   </head>
