--- a/product.html
+++ b/product.html
@@ -53,48 +53,66 @@
           <!-- creates a href(link to another webpage) and titles it "acount"-->
         </ul>
       </nav>
-      <br/>
-    </<h1>
-        the light sensor
-      </h1>
-      </p>body>
+      <br />
+      <h1>the light sensor</h1>
+      <p>
+        we designed the light sensor with the primary goal that it would open
+        the doors for accesiblity in planting, Regardless if you have a physical
+        or mental disabilty or if you just havent had a plant before this device
+        is perfect for you. there are no barriers when it comes to our project
+        anybody,anywhere can use them with no difficulty.
+      </p>
+      <p>
+        we frequently lower the price of the light sensor to allow for more
+        people in different situations to more easily access oroject.
+      </p>
+      <p>
+        the project uses radio signals and light values to calculate its data,
+        this info and much more about the inner workings of our device is
+        included with a manual with the light sensor when you purchase it
+      </p>
+    </body>
   </head>
 </html>
 <link rel="stylesheet" href="style.css" />
 <!-- Refereances the style sheet bringing css to the html -->
-<br/><br/><br/>
+<br /><br /><br />
 <div id="page-container">
-   <div id="content-wrap">
-     <p class="center">
-      fsdf 
-     </p>
-      <div class="right2">
-     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7631.968103334206!2d-50.72667889278294!3d67.00307916721461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4e91532c93e09b45%3A0x66c0d28fa993a614!2sOld%20Camp!5e0!3m2!1sen!2sie!4v1647293760856!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-     </div>
-        <!-- all other page content goes here -->
-   </div>
+  <div id="content-wrap">
+    <p class="center">fsdf</p>
+    <div class="right2">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7631.968103334206!2d-50.72667889278294!3d67.00307916721461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4e91532c93e09b45%3A0x66c0d28fa993a614!2sOld%20Camp!5e0!3m2!1sen!2sie!4v1647293760856!5m2!1sen!2sie"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+      ></iframe>
+    </div>
+    <!-- all other page content goes here -->
+  </div>
 
-  
-<footer id="footer">
-  <!-- creates a footer -->
-  <p>..........Copyright &copy; Music.ltd</p>
-  <!-- creates a paragraph -->
-  <ul class="footer-links">
-    <!-- unordered list with class footer links -->
-    <li>
-      <a href="info.html">.Info</a>
-      <!-- list with href about -->
-    </li>
-    <li>
-      <a href="product.html">.Product</a>
-      <!-- list with href product -->
-    </li>
-    <li>
-      <a href="contact.html">.Contact</a>
-      <!-- list with href contact -->
-    </li>
-  </ul>
-</footer>
+  <footer id="footer">
+    <!-- creates a footer -->
+    <p>..........Copyright &copy; Music.ltd</p>
+    <!-- creates a paragraph -->
+    <ul class="footer-links">
+      <!-- unordered list with class footer links -->
+      <li>
+        <a href="info.html">.Info</a>
+        <!-- list with href about -->
+      </li>
+      <li>
+        <a href="product.html">.Product</a>
+        <!-- list with href product -->
+      </li>
+      <li>
+        <a href="contact.html">.Contact</a>
+        <!-- list with href contact -->
+      </li>
+    </ul>
+  </footer>
 
-<!-- closes footer -->
+  <!-- closes footer -->
 </div>
